unnecessary code remove and chef card alignment bug fixed

--- a/src/Pages/home.scss
+++ b/src/Pages/home.scss
@@ -277,7 +277,6 @@
 
 /*** Our chefs css start ***/
 .chef-main-section {
-  justify-content: center;
   flex-wrap: nowrap;
   overflow-x: scroll;
   gap: 20px;
